--- a/OutletsApp/Views/Pages/MainPage.xaml
+++ b/OutletsApp/Views/Pages/MainPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:OutletsApp.Views.Pages"
       mc:Ignorable="d" 
+      Loaded="Page_Loaded"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage">
 
@@ -21,13 +22,13 @@
                         <TextBlock Text="Поиск:" Margin="0,0,10,0"/>
                         <TextBox x:Name="SearchBox" Width="200"/>
                     </StackPanel>
-                    <DataGrid x:Name="StoresDataGrid" Grid.Row="1" ColumnWidth="*" AutoGenerateColumns="False" CanUserAddRows="False" Margin="5">
+                    <DataGrid x:Name="StoresDataGrid" Grid.Row="1" ColumnWidth="*" SelectionChanged="StoresDataGrid_SelectionChanged" AutoGenerateColumns="False" CanUserAddRows="False" Margin="5">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Название" Binding="{Binding Название}"/>
                             <DataGridTextColumn Header="Адрес" Binding="{Binding Адрес}"/>
                             <DataGridTextColumn Header="Телефоны" Binding="{Binding Телефоны}"/>
-                            <DataGridTextColumn Header="Специализация" Binding="{Binding Специализация.Описание}"/>
-                            <DataGridTextColumn Header="Форма собственности" Binding="{Binding ФормаСобственности.Описание}"/>
+                            <DataGridTextColumn Header="Специализация" Binding="{Binding Специализации.Описание}"/>
+                            <DataGridTextColumn Header="Форма собственности" Binding="{Binding ФормыСобственности.Описание}"/>
                             <DataGridTextColumn Header="Время работы" Binding="{Binding ВремяРаботы}"/>
                         </DataGrid.Columns>
                     </DataGrid>
