--- a/OutletsApp/Views/Pages/ManageStoryPage.xaml
+++ b/OutletsApp/Views/Pages/ManageStoryPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:OutletsApp.Views.Pages"
       mc:Ignorable="d" FontSize="14"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ManageStoryPage">
 
@@ -16,12 +17,18 @@
             <TextBox Height="50" TextWrapping="Wrap" x:Name="txbAddress"/>
             <Label Content="Телефон:"/>
             <TextBox x:Name="txbPhoneNumber" PreviewTextInput="txbPhoneNumber_PreviewTextInput"/>
-            <Label Content="Спецаилизация:"/>
+            <Label Content="Специализация:"/>
             <ComboBox x:Name="SpecializationComboBox" DisplayMemberPath="Описание" SelectedValuePath="СпециализацияID"/>
+
             <Label Content="Форма собственности:"/>
             <ComboBox x:Name="OwnershipComboBox" DisplayMemberPath="Описание" SelectedValuePath="ФормаСобственностиID"/>
             <Label Content="Время работы:"/>
-            <TextBox x:Name="txbTimeWorking" PreviewTextInput="TimeTextBox_PreviewTextInput" TextChanged="txbTimeWorking_TextChanged" />
+            <xctk:MaskedTextBox Name="WorkTimeTextBox" 
+                            Mask="с 00:00 по 00:00" 
+                            Width="200" 
+                            Margin="10"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Left"/>
 
             <Button Content="Сохранить" x:Name="btnSave" Click="btnSave_Click" Margin="0,5,0,5"/>
             <Button Content="Назад" x:Name="btnBack" Click="btnBack_Click"/>
